// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forwards ref 1`] = `
<ForwardRef(forwardRef)
  className=""
  classes={Object {}}
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders a regular sized, primary colored ghost button with fullWidth 1`] = `
<ForwardRef(forwardRef)
  className="sizeRegular colorPrimary variantGhost fullWidth"
  classes={Object {}}
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders active state 1`] = `
<ForwardRef(forwardRef)
  className="active"
  classes={Object {}}
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className=""
  classes={
    Object {
      "keyboardFocus": "keyboardFocus",
      "mouseHover": "mouseHover",
    }
  }
>
  Push me
</ForwardRef(forwardRef)>
`;
